--- a/templates/admin_panel/partials/_orden_form.html
+++ b/templates/admin_panel/partials/_orden_form.html
@@ -8,6 +8,10 @@
         <label for="{{ form.numero_mesa.id_for_label }}" class="form-label">Número de Mesa</label>
         {{ form.numero_mesa }}
     </div>
+    <div class="mb-3">
+        <label for="{{ form.tipo.id_for_label }}" class="form-label">Tipo de Orden</label>
+        {{ form.tipo }}
+    </div>
 </form>
 
 <!-- Modal Footer (OOB) -->
