--- a/templates/menu/menu_lista.html
+++ b/templates/menu/menu_lista.html
@@ -116,7 +116,7 @@
       <div class="modal-body">
         <div id="orden-validation-result"></div>
         <label for="ordenInput" class="form-label mt-2">Número de orden</label>
-        <input type="number" name="orden_id" class="form-control" id="ordenInput" required>
+        <input type="text" name="orden_id" class="form-control" id="ordenInput" required>
       </div>
       <div class="modal-footer">
         <button type="submit" class="btn btn-primary">Validar</button>
