--- a/templates/base.html
+++ b/templates/base.html
@@ -58,17 +58,17 @@
 
       <!-- Footer sticky al fondo -->
       {% if show_footer %}
-        <footer class="bg-dark text-white py-4 mt-auto">
+        <footer class="bg-dark text-white py-2 mt-auto">
           <div class="container">
             <div class="row">
-              <div class="col-md-3 mb-3">
+              <div class="col-md-2 mb-3">
                 <h5 class="text-uppercase">{{ info_restaurante.nombre|default:"Pollo Fito" }}</h5>
                 <p class="small">{{ info_restaurante.eslogan|default:"Sabor tradicional, servicio moderno." }}</p>
                 <p class="small">
                   {{ info_restaurante.ubicacion|default:"Santa Ana, El Salvador" }}
                 </p>
               </div>
-              <div class="col-md-3 mb-3">
+              <div class="col-md-2 mb-3">
                 <h6 class="text-uppercase">Enlaces</h6>
                 <ul class="list-unstyled small">
                   <li><a href="{% url 'menu:menu_lista' %}" class="text-white text-decoration-none">Menú</a></li>
@@ -76,7 +76,7 @@
                   <li><a href="{% url 'menu:conocenos' %}" class="text-white text-decoration-none">Conócenos</a></li>
                 </ul>
               </div>
-              <div class="col-md-3 mb-3">
+              <div class="col-md-2 mb-3">
                 <h6 class="text-uppercase">Síguenos en Redes Sociales</h6>
                 {% if info_restaurante.facebook_url %}
                   <a href="{{ info_restaurante.facebook_url }}" target="_blank" class="text-white me-2">
@@ -89,11 +89,15 @@
                   </a>
                 {% endif %}
               </div>
-              <div class="col-md-3 mb-3">
+              <div class="col-md-2 mb-3">
                 <h6 class="text-uppercase text-primary">¡Ahora puedes ordenar a Domicilio!</h6>
                 <a href="https://wa.me/503{{ info_restaurante.telefono }}" target="_blank"><i class="bi bi-whatsapp"></i></a>
-                <br/>
-                <br/>
+              </div>
+              <div class="col-md-2 mb-3">
+                <h6 class="text-uppercase">Nuestros horarios:</h6>
+                <p class="small">Lunes-Viernes: 12:00 pm - 10:00 pm</p>
+              </div>
+              <div class="col-md-2 mb-3">
                 <h6 class="text-uppercase">Contactanos</h6>
                   {% if info_restaurante.telefono %}
                     <p class="mb-1"><i class="bi bi-telephone"></i> {{ info_restaurante.telefono }}</p>
@@ -108,6 +112,12 @@
             </div>
           </div>
         </footer>
+      {% else %}
+          <footer class="py-2 mt-auto">
+            <div class="text-center mt-3 small">
+              &copy; 2025 {{ info_restaurante.nombre|default:"Pollo Fito" }}. Todos los derechos reservados.
+            </div>
+          </footer>
       {% endif %}
     </body>
 </html>
