Fix orden toggle error in admin_panel

--- a/templates/admin_panel/partials/_orden_toggle_row.html
+++ b/templates/admin_panel/partials/_orden_toggle_row.html
@@ -1,5 +1,7 @@
 <tr id="orden-row-{{ orden.id }}">
     <td>{{ orden.orden }}</td>
+    <td>{{ orden.created_at|date:"d/m/Y H:i" }}</td>
+    <td>{{ orden.get_tipo_display }}</td>
     <td>{{ orden.numero_mesa }}</td>
     <td>
         <form method="post"
